--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-REACT_APP_API_KEY_CLIENT_HOST=http://localhost:3000
-REACT_APP_API_KEYS_SERVER_ROOT=http://localhost:5000/api/v1
+REACT_APP_API_KEYS_SERVER_ROOT=https://sens-ai-backend.onrender.com/api/v1
